Web-018: se corrigen errores de visualización por encapsulación.

--- a/web/maqueta-web/src/app/report-detail/report-detail.component.css
+++ b/web/maqueta-web/src/app/report-detail/report-detail.component.css
@@ -95,6 +95,7 @@
 }
 
 :root {
+    --mat-datepicker-calendar-container-background-color: #e2e2e2;
     --mat-datepicker-toggle-active-state-icon-color: #005d52 !important;
     --mat-datepicker-toggle-icon-color: #5e5e5e;
     --mat-datepicker-calendar-date-text-color: #5e5e5e;
@@ -105,7 +106,7 @@
     --mdc-text-button-label-text-color: #5e5e5e;
     --mat-datepicker-calendar-date-selected-state-background-color: #005d52;
     --mat-datepicker-calendar-date-selected-disabled-state-background-color: #6D9D99 !important;
-    --mat-datepicker-calendar-date-focus-state-background-color:#6D9D99 !important;
+    --mat-datepicker-calendar-date-focus-state-background-color: #6D9D99 !important;
     --mat-datepicker-calendar-date-hover-state-background-color: #6D9D99 !important;
     --mdc-filled-text-field-disabled-container-color: #e2e2e2;
 }
