--- a/web/maqueta-web/src/app/user-settings/user-settings.component.css
+++ b/web/maqueta-web/src/app/user-settings/user-settings.component.css
@@ -151,7 +151,8 @@
     color: #c6c6c6;
 }
 
-.user-settings-component :root {
+:root {
+    --mat-datepicker-calendar-container-background-color: #e2e2e2;
     --mat-datepicker-toggle-active-state-icon-color: #005d52 !important;
     --mat-datepicker-toggle-icon-color: #5e5e5e;
     --mat-datepicker-calendar-date-text-color: #5e5e5e;
@@ -164,6 +165,7 @@
     --mat-datepicker-calendar-date-selected-disabled-state-background-color: #6D9D99 !important;
     --mat-datepicker-calendar-date-focus-state-background-color: #6D9D99 !important;
     --mat-datepicker-calendar-date-hover-state-background-color: #6D9D99 !important;
+    --mdc-filled-text-field-disabled-container-color: #e2e2e2;
 }
 
 .user-settings-component .mat-datepicker-content {
